@@ -19,9 +19,8 @@ import de.sfuhrm.radiobrowser4j.EndpointDiscovery;
 import de.sfuhrm.radiobrowser4j.Paging;
 import de.sfuhrm.radiobrowser4j.RadioBrowser;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -69,7 +68,7 @@ public class Main {
         RadioBrowser browser = new RadioBrowser(endpoint.get(),
                 params.getTimeout() * 1000,
                 GITHUB_URL,
-                params.getProxy() != null ? params.getProxy().toExternalForm() : null,
+                params.getProxy() != null ? params.getProxy().toASCIIString() : null,
                 null,
                 null);
         return browser;
@@ -86,14 +85,16 @@ public class Main {
         RadioBrowser radioBrowser = newRadioBrowser(params);
         int limit = params.getStationLimit();
         for (String urlString : urls) {
-            try {
-                URL url = new URL(urlString); // parse the url
+            URI uri = URI.create(urlString); // parse the url
+
+            String scheme = uri.getScheme();
+            if (scheme != null) {
                 Radio s = new Radio();
                 s.setName("User-Suppplied URL");
-                s.setUrl(url);
+                s.setUri(uri);
                 result.add(s);
-            } catch (MalformedURLException ex) {
-                log.debug("Parameter not an URL: "+urlString, ex);
+            } else {
+                log.debug("Parameter not an URL: {}", urlString);
                 try {
                     UUID uuid = UUID.fromString(urlString);
                     List<Station> stations = radioBrowser.listStationsBy(SearchMode.BYUUID, uuid.toString()).collect(Collectors.toList());
@@ -101,7 +102,7 @@ public class Main {
                     result.addAll(radios);
                 }
                 catch (IllegalArgumentException e) {
-                    log.debug("Parameter not an UUID: "+urlString, ex);
+                    log.debug("Parameter not an UUID: {}", urlString);
                     List<Station> stations = radioBrowser.listStationsBy(
                             Paging.at(0, limit),
                             SearchMode.BYNAME,
@@ -114,7 +115,7 @@ public class Main {
         return result;
     }
 
-    private static ConsumerContext toConsumerContext(Params p, Radio radio) throws MalformedURLException, UnsupportedEncodingException {
+    private static ConsumerContext toConsumerContext(Params p, Radio radio) throws MalformedURLException {
         return new ConsumerContext(nextId++, radio, p);
     }
 
@@ -127,7 +128,7 @@ public class Main {
     }
 
     private static class MyListener implements ChromeCastsListener {
-        private List<CastItem> discovered = new ArrayList<>();
+        private final List<CastItem> discovered = new ArrayList<>();
         @Override
         public void newChromeCastDiscovered(ChromeCast chromeCast) {
             CastItem castItem = new CastItem(chromeCast.getTitle(), chromeCast.getModel(), chromeCast.getAddress(), chromeCast.getAppTitle());
@@ -157,10 +158,10 @@ public class Main {
         }
 
         ListHelper<CastItem> helper = new ListHelper<>(instance.discovered);
-        helper.addColumn("Title", i -> i.getTitle());
-        helper.addColumn("Model", i -> i.getModel());
-        helper.addColumn("Address", i -> i.getAddress());
-        helper.addColumn("App Title", i -> i.getAppTitle());
+        helper.addColumn("Title", CastItem::getTitle);
+        helper.addColumn("Model", CastItem::getModel);
+        helper.addColumn("Address", CastItem::getAddress);
+        helper.addColumn("App Title", CastItem::getAppTitle);
         helper.print(System.out);
     }
 
@@ -202,17 +203,15 @@ public class Main {
         }
 
         List<Thread> threadList = new ArrayList<>();
-        List<RadioRunnable> radioRunnables = new ArrayList<>();
         radios.stream().forEach(radio -> {
             try {
                 log.info("Starting radio: {}", radio);
                 RadioRunnable r = new RadioRunnable(toConsumerContext(params, radio));
-                radioRunnables.add(r);
                 Thread t = new Thread(r, "Radio " + radio.getUuid());
                 threadList.add(t);
                 t.start();
             } catch (IOException ex) {
-                log.warn("Could not start thread for station url "+radio.getUrl(), ex);
+                log.warn("Could not start thread for station url "+radio.getUri(), ex);
             }
         });
 
@@ -240,9 +239,9 @@ public class Main {
         }
 
         ListHelper<Mixer.Info> helper = new ListHelper<>(infoList);
-        helper.addColumn("Name", i -> i.getName());
-        helper.addColumn("Description", i -> i.getDescription());
-        helper.addColumn("Vendor", i -> i.getVendor());
+        helper.addColumn("Name", Mixer.Info::getName);
+        helper.addColumn("Description", Mixer.Info::getDescription);
+        helper.addColumn("Vendor", Mixer.Info::getVendor);
         helper.print(System.out);
     }
 
@@ -256,8 +255,8 @@ public class Main {
 
         ListHelper<Radio> helper = new ListHelper<>(radios);
         helper.addColumn("UUID", s -> s.getUuid().toString());
-        helper.addColumn("Name", s -> s.getName());
-        helper.addColumn("Codec", s -> s.getCodec());
+        helper.addColumn("Name", Radio::getName);
+        helper.addColumn("Codec", Radio::getCodec);
         helper.addColumn("BR", s -> String.format("%d", s.getBitrate()));
         helper.addColumn("Tags", s -> s.getTags().toString());
 
